--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
     "antd": "^4.16.3",
     "axios": "^0.21.1",
     "bootstrap": "4.6.0",
-    "react": "^17.0.2",
-    "react-daum-postcode": "^2.0.6",
-    "react-modal": "^3.14.3",
     "classnames": "^2.3.1",
+    "react": "^17.0.2",
     "react-bootstrap": "1.5.2",
     "react-datepicker": "^4.1.1",
+    "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-virtualized": "^9.22.3",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
