--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@nivo/core": "^0.70.1",
     "@nivo/pie": "^0.70.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -16,9 +18,9 @@
     "bootstrap": "4.6.0",
     "classnames": "^2.3.1",
     "dayz": "^2.9.0",
+    "mdbreact": "^5.0.2",
     "moment-range": "^4.0.2",
     "node-sass": "5.0.0",
-    "mdbreact": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "1.5.2",
     "react-datepicker": "^4.1.1",
@@ -29,8 +31,8 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.0",
     "react-virtualized": "^9.22.3",
+    "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
