--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-form-elements": "^4.14.0",
     "react-modal": "^3.14.3",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
