--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material/radio": "^11.0.0",
     "@nivo/core": "^0.70.1",
     "@nivo/pie": "^0.70.1",
     "@testing-library/jest-dom": "^5.11.4",
