--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-form-elements": "^4.14.0",
+    "react-image-gallery": "^1.1.1",
     "react-live-clock": "^5.2.0",
     "react-modal": "^3.14.3",
     "react-moment": "^1.1.1",
