--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-virtualized": "^9.22.3",
+    "react-webcam": "^5.2.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.0",
