--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^4.16.5",
     "axios": "^0.21.1",
     "bootstrap": "4.6.0",
+    "chart.js": "^3.4.1",
     "classnames": "^2.3.1",
     "dayz": "^2.9.0",
     "mdbreact": "^5.0.2",
@@ -30,6 +31,7 @@
     "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "1.5.2",
+    "react-chartjs-2": "^3.0.3",
     "react-csv": "^2.0.3",
     "react-datepicker": "^4.1.1",
     "react-daum-postcode": "^2.0.6",
@@ -49,6 +51,7 @@
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.0",
     "sweetalert2": "^11.0.18",
+    "tabler-react": "^1.30.1",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.17.0"
   },
