--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.1.2",
     "react-select": "^4.3.1",
     "react-virtualized": "^9.22.3",
     "react-webcam": "^5.2.4",
