--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-modal": "^3.14.3",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
+    "react-responsive-carousel": "^3.2.20",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-to-bottom": "^4.1.2",
